--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <div id="output"></div>
       </div>
     </div>
+    <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
