分离extension和测试环境

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <pre id="generatedCode"><code></code></pre>
       </div>
     </div>
-    <script type="module" src="/src/index.ts"></script>
+    <script type="module" src="/test/index.ts"></script>
   </body>
 </html>
